<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="continue_watching"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_play"
        android:shortcutShortLabel="@string/shortcut_continue_short"
        android:shortcutLongLabel="@string/shortcut_continue_long"
        android:shortcutDisabledMessage="@string/shortcut_continue_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.anird"
            android:targetClass="com.example.anird.MainActivity"
            android:data="anird://history"/>
        <categories android:name="android.shortcut.conversation"/>
    </shortcut>

    <shortcut
        android:shortcutId="favorites"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_heart"
        android:shortcutShortLabel="@string/shortcut_favorites_short"
        android:shortcutLongLabel="@string/shortcut_favorites_long"
        android:shortcutDisabledMessage="@string/shortcut_favorites_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.anird"
            android:targetClass="com.example.anird.MainActivity"
            android:data="anird://favorites"/>
        <categories android:name="android.shortcut.conversation"/>
    </shortcut>

</shortcuts>
